# bsockets

./: CMakeLists.txt  bsockets.kdev4  client.cpp  main.cpp
.kdev4/: bsockets.kdev4
